welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: value =< is not a member of Int
	((a<b && b<c) || (equalOk && a=<b && b=<c))
                                      ^